// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummary with 1 expense 1`] = `
<tfoot>
  <tr>
    <th>
      Viewing
    </th>
    <th>
       
      1
       
      expense
    </th>
    <th>
      totalling 
      $2.35
    </th>
  </tr>
</tfoot>
`;

exports[`should correctly render ExpensesSummary with multiple expenses 1`] = `
<tfoot>
  <tr>
    <th>
      Viewing
    </th>
    <th>
       
      23
       
      expenses
    </th>
    <th>
      totalling 
      $235,123,409.87
    </th>
  </tr>
</tfoot>
`;
